fix: display references as a bulleted list
Updated the Reference component to use a bullet delimiter rather than a
number when displayed on the main view. The solution is far from ideal,
where it would've been preferable to update the getLabel() method to take
the mode as input and return the correct label based on state. But there
are other points in the code that ignore the getLabel() method also so the
extent of the refactoring would be a little too much for the scope of this
ticket.

In addition, I also made the following tweaks to the Reference component as
per the design requirements.
- Removed the label when a reference is displayed in preview mode.
- Added placeholder 'edit' and 'delete' buttons, but these will be wired up
  at a later date.
- Added some documentation to various functions.

--- a/src/article/styles/_reference.css
+++ b/src/article/styles/_reference.css
@@ -10,8 +10,28 @@
 }
 
 .sc-reference > .se-label {
-  min-width: var(--t-default-spacing);
+  flex-basis: var(--t-default-spacing);
+  flex-grow: 0;
+  flex-shrink: 0;
   margin: 0 var(--t-default-spacing);
   font-weight: var(--t-bold-font-weight);
   text-align: center;
+}
+
+.sc-reference > .se-text {
+  flex-grow: 1;
+  margin-right: 10px;
+}
+
+.sc-reference > .se-icon {
+  flex-basis: var(--t-default-spacing);
+  flex-grow: 0;
+  flex-shrink: 0;
+  margin: 4px 0 0 var(--t-half-spacing);
+  font-weight: var(--t-bold-font-weight);
+  text-align: center;
+}
+
+.sc-reference > .fa-edit {
+  padding-top: 1px;
 }
